# LLM_Label

./: pyproject.toml
LLM_Label.git/: config
text_lloom/: concept_induction.py  education.xlsx  llm.py  test_score_comments.py
