[tool.poetry]
name = "lloom"
version = "0.1.0"
description = ""
authors = ["rebeccawzq <zw2780@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
tqdm = "^4.67.1"
pathos = "^0.3.3"
tiktoken = "^0.8.0"
openai = "^1.60.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
